fix: video player and links position on mobile

--- a/layout/Hero/hero.module.scss
+++ b/layout/Hero/hero.module.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     height: 100vh;
     overflow: hidden;
-    padding-bottom: 5vh;
+    padding-bottom: 10vh;
     position: relative;
 
     &__Greetings {
